<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.vidagraphics.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:padding="7dp"
                android:text="@string/app_name"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:src="@drawable/icon" />

            <TableLayout
                android:id="@+id/workDaysTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:stretchColumns="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingTop="2dp"
                    android:text="@string/openhours" />

                <TableRow>

                    <TextView
                        android:paddingTop="2dp"
                        android:text="@string/monday" />

                    <TextView
                        android:paddingLeft="20dp"
                        android:text="@string/workhours" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:paddingTop="2dp"
                        android:text="@string/tuesday" />

                    <TextView
                        android:paddingLeft="20dp"
                        android:text="@string/workhours" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:paddingTop="2dp"
                        android:text="@string/wednesday" />

                    <TextView
                        android:paddingLeft="20dp"
                        android:text="@string/workhours" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:paddingTop="2dp"
                        android:text="@string/thursday" />

                    <TextView
                        android:paddingLeft="20dp"
                        android:text="@string/workhours" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:paddingTop="2dp"
                        android:text="@string/friday" />

                    <TextView
                        android:paddingLeft="20dp"
                        android:text="@string/workhours" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:paddingTop="2dp"
                        android:text="@string/saturday" />

                    <TextView
                        android:paddingLeft="20dp"
                        android:text="@string/closed" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:paddingTop="2dp"
                        android:text="@string/sunday" />

                    <TextView
                        android:paddingLeft="20dp"
                        android:text="@string/closed" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/contactTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="2dp"
                    android:text="@string/waystocontact" />

                <TableRow>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:autoLink="web"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="openWeb"
                        android:src="@drawable/www" />

                    <TextView
                        android:id="@+id/web"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/web" />
                </TableRow>

                <TableRow>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="sendEmail"
                        android:src="@drawable/gmail" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/email" />
                </TableRow>

                <TableRow>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="phoneCall"
                        android:src="@drawable/phone" />

                    <TextView
                        android:id="@+id/phonenumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/phoneNumber" />

                </TableRow>

                <TableRow>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="openMap"
                        android:src="@drawable/gmaps" />

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="20dp"
                        android:text="@string/address" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
